--- a/HTML - Personal Site/contact-me.html
+++ b/HTML - Personal Site/contact-me.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Contact-me</title>
-  </head>
-  <body>
-    <h1>Contact me</h1>
-    <p>My fictional address</p>
-    <p>123456789</p>
-    <p>email@gmail.com</p>
-    <hr>
-    <form class="" action="mailto:celldeusuicide@hotmail.com" method="post" enctype="text/text/plain">
-      <label for="">Your Name:</label>
-      <input type="text" name="yourName" value="">
-      <br>
-      <label for="">Your email:</label>
-      <input type="email" name="yourEmail" value="">
-      <br>
-      <label for="">Your Message:</label>
-      <textarea name="yourMessage" rows="10" cols="30"></textarea>
-      <br>
-      <input type="submit" name="" value="Submit">
-    </form>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Contact-me</title>
+  <link rel="stylesheet" href="./css/styles.css">
+</head>
+
+<body>
+  <h1>Contact me</h1>
+  <p>My fictional address</p>
+  <p>123456789</p>
+  <p>email@gmail.com</p>
+  <hr>
+  <form class="" action="mailto:celldeusuicide@hotmail.com" method="post" enctype="text/text/plain">
+    <label for="">Your Name:</label>
+    <input type="text" name="yourName" value="">
+    <br>
+    <label for="">Your email:</label>
+    <input type="email" name="yourEmail" value="">
+    <br>
+    <label for="">Your Message:</label>
+    <textarea name="yourMessage" rows="10" cols="30"></textarea>
+    <br>
+    <input type="submit" name="" value="Submit">
+  </form>
+</body>
+
 </html>
