--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>☺ Nicholas' Personal Site</title>
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -61,6 +62,7 @@
   </table>
   <hr>
   <a href="hobbies.html">My Hobbies</a>
+  <a href="contact-me.html">Contact Me</a>
 </body>
 
 </html>
